# cross-docker

./: .gitignore  README.md  android_24_arm_clang-linux  android_24_arm_clang-win  bld-autoconf.sh  bld-make.sh  bld-make64.sh
base/: Dockerfile  bld.sh
c-ares/: conanbuildinfo.cmake  conandata.yml  conaninfo.txt
c-ares/build_subfolder/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
c-ares/build_subfolder/source_subfolder/: Makefile  ares_config.h  c-ares-config-version.cmake  c-ares-config.cmake  cmake_install.cmake  libcares.pc
c-ares/build_subfolder/source_subfolder/docs/: Makefile  cmake_install.cmake
c-ares/build_subfolder/source_subfolder/include/: Makefile  cmake_install.cmake
c-ares/build_subfolder/source_subfolder/src/: Makefile  cmake_install.cmake
c-ares/build_subfolder/source_subfolder/src/lib/: Makefile  Makefile.inc.cmake  cmake_install.cmake
c-ares/build_subfolder/source_subfolder/src/tools/: Makefile  cmake_install.cmake
conan_test/: .gitignore  CMakeLists.txt  arm-linux-linaro-6.5  arm-linux-linaro-6.5.cmake  arm-linux-linaro-6.5.pr  cb.sh  cg.cmd  cg.sh  conan_toolchain.cmake  conanfile.txt  linux-linux-armv7a-L6.cmake  main.cpp  ndk-linux-andorid-24  ndk-linux-andorid-24.cmake  ndk-linux-andorid-24.pr  profile_andorid24  win-andorid-armv7a-24.cmake  win-andorid-armv7a-24.pr
foo/: CMakeLists.txt  bld.sh  bld64.sh  cb.sh  cg.sh  foo.cpp
linaro6.5/: Dockerfile  bld.sh
ndkr18b/: Dockerfile  bld.sh
ndkr22/: Dockerfile  bash_rc.sh  bld.sh
